# Serialize

./: .gitignore
CThriftDemo/: CMakeLists.txt  tutorial.thrift
CThriftDemo/src/: c_glib_client.c  c_glib_server.c
thriftDemo/: CMakeLists.txt  CppServer.cpp  shared.thrift  thrift简介.md
thriftDemo/cpp/: CppClient.cpp  CppServer.cpp
